added more files

--- a/development.ini
+++ b/development.ini
@@ -14,6 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
+    pyramid_fanstatic
 
 sqlalchemy.url = sqlite:///%(here)s/mslemon.sqlite
 
@@ -24,6 +25,12 @@ session.lock_dir = %(here)s/data/sessions/lock
 session.key = mykey
 session.secret = sesssekret
 session.cookie_on_exception = true
+
+mslemon.authn.secret = 5up3r5ekrit
+mslemon.authn.cookie = auth_tkt_mslemon
+mslemon.authn.timeout = 900
+
+
 
 
 
