configurable calendar views works now, starting sms email support

--- a/development.ini
+++ b/development.ini
@@ -28,7 +28,20 @@ session.cookie_on_exception = true
 
 mslemon.authn.secret = 5up3r5ekrit
 mslemon.authn.cookie = auth_tkt_mslemon
-mslemon.authn.timeout = 900
+mslemon.authn.timeout = 3600
+
+mslemon.smtp.server = mail.domain
+mslemon.smtp.port = 25
+mslemon.smtp.login = user@domain
+mslemon.smtp.password = secretpass
+
+# This already defaults to 'admin'
+# set it to something else
+# The populate script will make the password
+# the same as the user name.
+#mslemon.admin.admin_username = admin
+
+db.populate = True
 
 
 
