--- a/production.ini
+++ b/production.ini
@@ -13,8 +13,46 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
+    pyramid_fanstatic
 
 sqlalchemy.url = sqlite:///%(here)s/mslemon.sqlite
+
+
+session.type = file
+session.data_dir = %(here)s/data/sessions/data
+session.lock_dir = %(here)s/data/sessions/lock
+session.key = mykey
+session.secret = sesssekret
+session.cookie_on_exception = true
+
+mslemon.authn.secret = 5up3r5ekrit
+mslemon.authn.cookie = auth_tkt_mslemon
+mslemon.authn.timeout = 3600
+
+mslemon.smtp.server = mail.domain
+mslemon.smtp.port = 25
+mslemon.smtp.login = user@domain
+mslemon.smtp.password = secretpass
+
+# This already defaults to 'admin'
+# set it to something else
+# The populate script will make the password
+# the same as the user name.
+#mslemon.admin.admin_username = admin
+
+db.populate = False
+
+
+
+
+
+# By default, the toolbar only appears for clients from IP addresses
+# '127.0.0.1' and '::1'.
+# debugtoolbar.hosts = 127.0.0.1 ::1
+
+###
+# wsgi server configuration
+###
 
 [server:main]
 use = egg:waitress#main
