update ini files with defaults

--- a/production.ini
+++ b/production.ini
@@ -34,6 +34,12 @@ mslemon.smtp.port = 25
 mslemon.smtp.login = user@domain
 mslemon.smtp.password = secretpass
 
+mslemon.public_url = https://real.domain
+
+mslemon.scans.directory = /path/to/scans
+mslemon.scans.scanplace = scanplace
+
+
 # This already defaults to 'admin'
 # set it to something else
 # The populate script will make the password
