--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,27 @@
-[egg_info]
-tag_build = dev
-tag_svn_revision = true
+[nosetests]
+match=^test
+nocapture=1
+cover-package=mslemon
+with-coverage=1
+cover-erase=1
+
+[compile_catalog]
+directory = mslemon/locale
+domain = mslemon
+statistics = true
+
+[extract_messages]
+add_comments = TRANSLATORS:
+output_file = mslemon/locale/mslemon.pot
+width = 80
+
+[init_catalog]
+domain = mslemon
+input_file = mslemon/locale/mslemon.pot
+output_dir = mslemon/locale
+
+[update_catalog]
+domain = mslemon
+input_file = mslemon/locale/mslemon.pot
+output_dir = mslemon/locale
+previous = true
